# metaspn-ops

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  RUNBOOK-S1.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/metaspn_ops/: __init__.py  backends.py  cli.py  fs_queue.py  lease.py  runner.py  scheduler.py  types.py
src/metaspn_ops/workers/: __init__.py  demo.py  m0.py  m1.py  m2.py  m3.py  s1.py  token_promises.py
tests/: test_demo_flow.py  test_lease_race.py  test_m0_workers.py  test_m1_workers.py  test_m2_workers.py  test_m3_workers.py  test_ops_queue.py  test_public_api.py  test_s1_workers.py  test_token_promises.py
